v1.13.x-SNAPSHOT/connectors/messaging/redpanda/yaml.mdx
---
title: Run the Redpanda Connector Externally
description: Use YAML to configure Redpanda metadata ingestion and track streaming data topics, schema evolution, and system events.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import SourceConfigDef from '/snippets/connectors/yaml/messaging/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/messaging/source-config.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.13.x-SNAPSHOT/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/redpanda.webp'
name="Redpanda"
stage="PROD"
availableFeatures={["Topics", "Sample Data", "Consumer Groups", "Data Transform Lineage"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the Redpanda connector.
Configure and schedule Redpanda metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
<ExternalIngestionDeployment />
## Requirements
### Python Requirements
<PythonRequirements />
To run the Redpanda ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[redpanda]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/messaging/redpandaConnection.json)
you can find the structure to create a connection to Redpanda.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config
This is a sample config for Redpanda:
<SourceConfigDef />
<IngestionSinkDef />
<WorkflowConfigDef />
<CodePreview>
<ContentPanel>
<ContentSection id={1} title="Source Configuration" lines="1-3">
Configure the source type and service name.
</ContentSection>
<ContentSection id={2} title="bootstrapServers" lines="7">
**bootstrapServers**: List of brokers as comma separated values of broker `host` or `host:port`.
Example: `host1:7-807-82,host2:7-807-82`
</ContentSection>
<ContentSection id={3} title="schemaRegistryURL" lines="8">
**schemaRegistryURL**: URL of the Schema Registry used to ingest the schemas of the topics.
**NOTE**: For now, the schema will be the last version found for the schema name `{topic-name}-value`. An [issue](https://github.com/open-metadata/OpenMetadata/issues/8399) to improve how it currently works has been opened.
</ContentSection>
<ContentSection id={4} title="saslUsername" lines="9">
**saslUsername**: SASL username for use with the PLAIN and SASL-SCRAM mechanisms.
</ContentSection>
<ContentSection id={5} title="saslPassword" lines="10">
**saslPassword**: SASL password for use with the PLAIN and SASL-SCRAM mechanisms.
</ContentSection>
<ContentSection id={6} title="saslMechanism" lines="11">
**saslMechanism**: SASL mechanism to use for authentication.
Supported: _GSSAPI, PLAIN, SCRAM-SHA-256, SCRAM-SHA-512, OAUTHBEARER_.
**NOTE**: Despite the name only one mechanism must be configured.
</ContentSection>
<ContentSection id={7} title="basicAuthUserInfo" lines="12">
**basicAuthUserInfo**: Schema Registry Client HTTP credentials in the form of `username:password`.
By default, user info is extracted from the URL if present.
</ContentSection>
<ContentSection id={8} title="consumerConfig" lines="13">
**consumerConfig**: The accepted additional values for the consumer configuration can be found in the following
[link](https://github.com/edenhill/librdkafka/blob/master/CONFIGURATION.mdx).
</ContentSection>
<ContentSection id={9} title="schemaRegistryConfig" lines="14">
**schemaRegistryConfig**: The accepted additional values for the Schema Registry configuration can be found in the
following [link](https://docs.confluent.io/platform/current/clients/confluent-kafka-python/html/index.html#schemaregistryclient).
**Note:** To ingest the topic schema, `schemaRegistryURL` must be passed.
</ContentSection>
<ContentSection id={10} title="securityProtocol" lines="15">
**securityProtocol**: security.protocol consumer config property. It accepts `PLAINTEXT`,`SASL_PLAINTEXT`, `SASL_SSL`, `SSL`.
</ContentSection>
<ContentSection id={11} title="supportsMetadataExtraction" lines="16">
**supportsMetadataExtraction**: Supports Metadata Extraction. `supportsMetadataExtraction` supports boolean value either true or false.
</ContentSection>
<ContentSection id={12} title="consumerConfigSSL" lines="17-19">
**consumerConfigSSL**: SSL configuration for the broker consumer connection. Provide `caCertificate`, `sslCertificate`, and `sslKey` for mTLS authentication.
</ContentSection>
<ContentSection id={13} title="schemaRegistrySSL" lines="20-22">
**schemaRegistrySSL**: SSL configuration for the Schema Registry connection. Provide `caCertificate`, `sslCertificate`, and `sslKey` for mTLS authentication.
</ContentSection>
<ContentSection id={14} title="redpandaAdminApiUrl" lines="23">
**redpandaAdminApiUrl**: URL of the Redpanda Admin API (typically port 9644). Required for extracting data transform lineage. Example: `http://localhost:9644`
</ContentSection>
</ContentPanel>
<CodePanel fileName="connector_config.yaml">

```yaml
source:
  type: redpanda
  serviceName: local_redpanda
  serviceConnection:
    config:
      type: Redpanda
      bootstrapServers: localhost:9092
      schemaRegistryURL: http://localhost:8081  # Needs to be a URI
      saslUsername: username
      saslPassword: password
      saslMechanism: PLAIN
      basicAuthUserInfo: username:password
      consumerConfig: {}
      schemaRegistryConfig: {}
      # consumerConfigSSL:
      #   caCertificate: "-----BEGIN CERTIFICATE-----\n...\n-----END CERTIFICATE-----"
      #   sslCertificate: "-----BEGIN CERTIFICATE-----\n...\n-----END CERTIFICATE-----"
      #   sslKey: "-----BEGIN RSA PRIVATE KEY-----\n...\n-----END RSA PRIVATE KEY-----"
      # schemaRegistrySSL:
      #   caCertificate: "-----BEGIN CERTIFICATE-----\n...\n-----END CERTIFICATE-----"
      # redpandaAdminApiUrl: http://localhost:9644
      # securityProtocol: PLAINTEXT
      # supportsMetadataExtraction: true
```
<SourceConfig />
<IngestionSink />
<WorkflowConfig />
</CodePanel>
</CodePreview>
<IngestionCli />
